# wireless_split_keyboard

./: .gitignore  CMakeLists.txt  btstack_config.h  btstack_tlv_stub.c  dongle.c  gatt_implementation_summary.md  keymap.h  left_half.c  nkro_instructions.md  right_half.c  split_kb_readme.md  tusb_config.h  usb_descriptors.c
